# federated_learning

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGES_SUMMARY.md  CLAUDE.md  CLIENT_COMPONENT_SUMMARY.md  CLIENT_DATA_MANAGER_ARCHITECTURE.md  CLIENT_DATA_MANAGER_ARCHITECTURE_DIAGRAM.txt  CLIENT_DATA_MANAGER_DELIVERABLES.txt  CLIENT_DATA_MANAGER_EXAMPLE.py  CLIENT_DATA_MANAGER_INTEGRATION.md  CLIENT_DATA_MANAGER_QUICK_REFERENCE.md  CLIENT_DATA_MANAGER_SUMMARY.md  CODE_COMPARISON.md  DATABASE_SAVE_CHANGES.md  Dockerfile  FEDERATED_INTEGRATION_SUMMARY.md  FEDERATED_LEARNING_DEBUG.md  FEDERATED_LEARNING_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PROJECT_PITCH_SLIDES.md  QUICK_REFERENCE.md  README.md  README_CLIENT_DATA_MANAGER.md  REFACTORED_CLIENT_COMPONENT.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN_RUNS_ENDPOINTS.md  REFACTORING_SUMMARY.md  ROUND_TRACKING_FIXES.md  ROUND_TRACKING_QUICK_REFERENCE.md  START_HERE_WEBSOCKET.md  TRAINER_ARCHITECTURE.md  TRAINER_USAGE.md  UNIT_TESTS_SUMMARY.md  USAGE_EXAMPLE.md  alembic.ini  analyze_results.py  conftest.py  (+30 more)
.claude/: settings.local.json
.claude/agents/: feature-enhancement-strategist.md
.claude/planning/: daedalus-orchestrator-design.md
.github/workflows/: ruff.yml  unit-tests.yml
.planning/: investigation-2026-01-09-143000.md  logging-exception-handling-improvements.md  proof_of_work_agent_modernization.py
ROC_GENERATION/: evaluate_checkpoints.py
ROC_GENERATION/comparative_data/: comprehensive_plots.py  comprehensive_plots_v1.py  generate_ieee_roc_curves.py  generate_plots.py  generate_proper_roc.py  generate_roc_training_plots.py
ROC_GENERATION/evaluation_results/: evaluation_results.json  metrics_comparison.csv
Training_Sample_5pct/: stage2_test_metadata.csv  stage2_train_metadata.csv
alembic/: README.md  env.py  script.py.mako
alembic/versions/: .gitkeep  20260119_0930_7036676c922c_initial_migration_with_all_6_models.py  20260127_0015_8252e1e6c4d3_.py  20260127_0016_c07ced5601cf_.py
analysis/: __init__.py  config.py  run_analysis.py
analysis/eda/: __init__.py  data_profiler.py  visualizer.py
analysis/modeling/: __init__.py  centralized_runner.py  federated_runner.py  results_aggregator.py  seed_manager.py
analysis/preprocessing/: __init__.py  data_loader.py
analysis/reporting/: __init__.py  exporters.py  latex_tables.py  markdown_report.py
analysis/schemas/: __init__.py  comparison.py  experiment.py  statistics.py
analysis/statistics/: __init__.py  bootstrap.py  effect_size.py  tests.py
analysis/visualization/: __init__.py  distributions.py  learning_curves.py  metric_bars.py  roc_curves.py  style.py
analysis_output_research/: analysis_report.md  comparative_result.json  metrics_summary.csv  raw_results.json
analysis_output_research/eda/: data_profile.json
analysis_output_research/experiments/: centralized_run_1.json  centralized_run_10.json  centralized_run_2.json  centralized_run_3.json  centralized_run_4.json  centralized_run_5.json  centralized_run_6.json  centralized_run_7.json  centralized_run_8.json  centralized_run_9.json  federated_run_1.json  federated_run_10.json  federated_run_2.json  federated_run_3.json  federated_run_4.json  federated_run_5.json  federated_run_6.json  federated_run_7.json  federated_run_8.json  federated_run_9.json
analysis_output_research/tables/: effect_sizes.tex  metrics_table.tex  statistical_summary.tex
analysis_output_research_sample/eda/: data_profile.json
comparative_data/: CHAPTER_6_RESULTS_ANALYSIS.md  README.md  actual_training_time_analysis.py  comprehensive_analysis.py  generate_roc_curve.py  high_quality_plots.py  statistical_analysis.json  training_time_analysis.py
comparative_data/baseline/: pre_tuning_federated.json
comparative_data/centralized/: best_run_metadata.json  centralized_summary.json  experiment_results.csv  statistical_analysis.json
comparative_data/federated/: federated_metrics_by_seed.csv  results_analysis_2.json  results_analysis_3.json
comparative_data/metadata/: current_config.yaml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.backend  Dockerfile.federated  Dockerfile.frontend  README.md  docker-compose.yml
docs/: PR.md  possible_enhancements.md
docs_planning/: notes.md  task_plan.md
documentation/: CENTRALIZED_TRAINER_ARCHITECTURE.puml  FEATURE_VISUAL_GUIDE.md  FLOWER_ARCHITECTURE.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  REAL_TIME_INSIGHTS_IMPLEMENTATION.md  SLASH_COMMAND_FEATURE.md  TRAINING_SCRIPTS_README.md  WEBSOCKET_AUTO_START.md  WEBSOCKET_METRICS_SETUP.md  data_flow_diagram.puml  deployment_diagram.puml  federated_debugging_improvements.md  guidelines.md  phase1_implementation.md  training_flow.puml
documents/: opik-integration.md
examples/: README_centralized_training.md  centralized_training_example.py
federated_pneumonia_detection/: ARCHITECTURE.puml  README.md  RUNNING_EXPERIMENTS.md  __init__.py  pytest.ini  requirements.txt
federated_pneumonia_detection/src/control/federated_new_version/: DIAGRAMS.md  README.md  TROUBLESHOOTING.md  client_app.py  partioner.ipynb  partioner.py  pyproject.toml  server_app.py  toml_adjustment.py
federated_pneumonia_detection/src/control/federated_new_version/core/: client_app.py  custom_strategy.py  server_app.py  server_evaluation.py  utils.py
optimization_analysis/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  run_baseline.py  run_onnx_fp16.py  run_onnx_fp32.py  test_module.py
scripts/: README.md  setup-pre-commit.ps1  setup-pre-commit.sh  start.ps1  websocket_server.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements-fl-test.txt  run_fl_tests.py  test_config.yaml  test_startup.py
xray-vision-ai-forge/: .env.development  .env.example  .env.production  .gitignore  DATASET_VALIDATION.md  README.md  SECURITY_REVIEW_COMPLETE.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.ts  tsconfig.app.json  vite.config.ts
(+993 files in other folders)
