[project]
name = "fyp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.6.10",
    "matplotlib>=3.10.7",
    "pandas>=2.3.2",
    "pgvector>=0.3.6",
    "plotly>=6.3.1",
    "pydantic-ai>=1.0.17",
    "pypdfium2>=4.30.0",
    "pytest>=8.4.2",
    "pytorch-lightning>=2.5.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
