[project]
name = "fyp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "fastapi>=0.119.0",
    "flwr-datasets[vision]>=0.5.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.0",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=3.1.0",
    "langchain-huggingface>=0.3.1",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.6.10",
    "matplotlib>=3.10.7",
    "pandas>=2.3.2",
    "pgvector>=0.3.6",
    "plotly>=6.3.1",
    "pypdfium2>=4.30.0",
    "pytest>=8.4.2",
    "pytorch-lightning>=2.5.5",
    "pyyaml>=6.0.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch",
    "torchvision",
    "torchaudio",
    "uvicorn>=0.37.0",
    "wandb>=0.22.2",
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "python-multipart>=0.0.20",
    "psycopg2>=2.9.11",
    "tomli-w>=1.2.0",
    "tomli>=2.3.0",
    "sentence-transformers>=5.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "reportlab>=4.4.9",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["federated_pneumonia_detection*"]
exclude = ["data*", "wandb*", "docker*", "alembic*", "results*", "analysis*", "xray-vision-ai-forge*"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
