[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pytorchlightning_example"
version = "1.0.0"
description = "Federated Learning with PyTorch Lightning and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "pytorch-lightning==2.5.5",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
max-epochs = 1
num_server_rounds = 20
max_epochs = 20

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
"options.num-supernodes" = 4
options_num_supernodes = 20

[tool.flwr.federations.local-simulation.options]
num-supernodes = 4
